Update team member names and images

--- a/index.html
+++ b/index.html
@@ -721,7 +721,7 @@
         <div class="team-member">
             <div class="member-card">
                 <div class="member-img-container">
-                    <img src="hirk_400x400.jpg" alt="Dr. Mark Chen" class="actual-img">
+                    <img src="hirk_400x400.jpg" alt="Dr. Hirak Patra" class="actual-img">
                     <div class="member-overlay">
                         <div class="social-mini">
                             <a href="#"><i class="fab fa-github"></i></a>
@@ -730,7 +730,7 @@
                     </div>
                 </div>
                 <div class="member-info">
-                    <h4>Dr. Mark Chen</h4>
+                    <h4>Dr. Hirak Patra</h4>
                     <p class="role">Lead AI</p>
                     <p class="specialty"> Oncology & Computer Vision</p>
                 </div>
@@ -740,7 +740,7 @@
         <div class="team-member">
             <div class="member-card">
                 <div class="member-img-container">
-                    <img src="hirk_400x400.jpg" alt="Sarah Jenkins" class="actual-img">
+                    <img src="hirk_400x400.jpg" alt="Hirak Patra" class="actual-img">
                     <div class="member-overlay">
                         <div class="social-mini">
                             <a href="#"><i class="fas fa-flask"></i></a>
@@ -749,7 +749,7 @@
                     </div>
                 </div>
                 <div class="member-info">
-                    <h4>Sarah Jenkins</h4>
+                    <h4>Hirak Patra</h4>
                     <p class="role">Biological Lead</p>
                     <p class="specialty">3D Cell Models</p>
                 </div>
